fixing the stats preview card so that it's aligned with frontend mentor website version!

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,7 +25,7 @@ body {
   margin: auto;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
-  margin-top: 100px;
+  margin-top: 80px;
   .section-left {
     margin: auto;
     flex: 1;
